tests/compile-errors/src/unsupported-type.stderr
error: Error building provider definition in "../../../tests/compile-errors/providers/unsupported-type.d"

       Input is not a valid DTrace provider definition:
        --> 2:12
         |
       2 |     probe bad(float);
         |               ^---
         |
         = expected RIGHT_PAREN or DATA_TYPE.

       Unsupported type, the following are supported:
         - uint8_t
         - uint16_t
         - uint32_t
         - uint64_t
         - int8_t
         - int16_t
         - int32_t
         - int64_t
         - &str
  --> src/unsupported-type.rs:15:1
   |
15 | usdt::dtrace_provider!("../../../tests/compile-errors/providers/unsupported-type.d");
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `usdt::dtrace_provider` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: use of undeclared crate or module `unsupported`
  --> src/unsupported-type.rs:19:5
   |
19 |     unsupported::bad!(|| (bad));
   |     ^^^^^^^^^^^ use of undeclared crate or module `unsupported`
